# EquityIntelligenceSystem

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/chat/: __init__.py
backend/app/core/: __init__.py  config.py  enums.py  scoring.py
backend/app/core/ai/: __init__.py  base.py  factory.py  gemini.py  groq.py  ollama.py
backend/app/extraction/: __init__.py
backend/app/graph/: models.py
backend/app/ingestion/: __init__.py  base.py  rss.py  seed.py
backend/app/intelligence/: __init__.py
backend/app/models/: __init__.py  schemas.py
backend/app/rag/: __init__.py  retriever.py
backend/app/reports/: __init__.py
backend/app/repositories/: __init__.py  memory.py
backend/app/services/: __init__.py  chat.py  event_extraction.py  insights.py  normalization.py  pipeline.py  scoring.py  signals.py
backend/app/tasks/: __init__.py  scheduler.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  Full_workflow.md  PRODUCT_BRIEF.md
frontend/: Dockerfile  next-env.d.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: dashboard.tsx  ui.tsx
frontend/lib/: api.ts  demo-data.ts  format.ts  types.ts
infra/: docker-compose.yml
scripts/: node_installer.sh  restart.sh  seed_backend.py  start.sh  stop.sh
tests/: test_pipeline.py
