[project]
name = "ai-equity-intelligence-backend"
version = "0.1.0"
description = "Event-centric equity intelligence backend"
requires-python = ">=3.13"
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "google-genai>=1.0.0",
  "groq>=0.13.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-json-logger>=2.0.7",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
